# fastapi-cms-platform

./: .gitignore  README.md  pyproject.toml
.github/workflows/: code_formatter.yaml  pytest.yaml
app/: main.py
app/core/: config.py  constant.py  container.py  database.py  dependency.py  exception.py  security.py
app/model/: base_model.py  board.py  bookmark.py  comment.py  message.py  post.py  reaction.py  tag.py  user.py
app/models/: board.py  bookmark.py  comment.py  message.py  post.py  reaction.py  tag.py  user.py
app/repositories/: __init__.py  base_repository.py  board_repository.py  bookmark_repository.py  comment_repository.py  post_repository.py  reaction_repository.py  tag_repository.py  user_repository.py
app/repository/: __init__.py  base_repository.py  board_repository.py  bookmark_repository.py  comment_repository.py  post_repository.py  reaction_repository.py  tag_repository.py  user_repository.py
app/service/: __init__.py  auth_service.py  base_service.py  board_service.py  bookmark_service.py  comment_service.py  post_service.py  reaction_service.py  tag_service.py  user_service.py
app/services/: __init__.py  auth_service.py  board_service.py  bookmark_service.py  comment_service.py  post_service.py  reaction_service.py  user_service.py
app/utils/: common.py
tests/: conftest.py
tests/integration_tests/: test_admin_router.py  test_auth_router.py  test_board_router.py  test_comment_router.py  test_post_router.py  test_reaction_router.py  test_user_router.py
tests/unit_tests/: test_fixtures.py  test_utils.py
tests/utils/: common.py  (+1 more)
(+25 files in other folders)
