[tool.poetry]
name = "fastapi-cms-platform"
version = "0.1.0"
description = ""
authors = ["jujumilk3 <jujumilk3@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
sqlalchemy = "1.4.47"
loguru = "^0.6.0"
dependency-injector = "^4.41.0"
anyio = "^3.6.2"
uvicorn = "^0.21.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = "^1.7.4"
bcrypt = "^4.0.1"
httpx = "^0.23.3"
python-multipart = "^0.0.6"

[tool.poetry.group.dev.dependencies]
pytest-xdist = "^3.2.1"
pytest-cov = "^4.0.0"
coverage = "^7.2.3"
pytest = "^7.3.0"
alembic = "^1.10.3"
black = "^23.3.0"
isort = "^5.12.0"
aiosqlite = "^0.18.0"
pytest-asyncio = "^0.21.0"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
include = '\.pyi?$'

[tool.isort]
line_length = 120
profile = 'black'
